// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StepSalaires /> should render lastSalaires 1`] = `
.c4 {
  position: relative;
  overflow: hidden;
}

.c4:before,
.c4:after {
  position: absolute;
  top: 0;
  bottom: 0;
  display: block;
  width: 4rem;
  opacity: 0;
  -webkit-transition: opacity 0.3s linear;
  transition: opacity 0.3s linear;
  content: "";
  pointer-events: none;
  background: radial-gradient( ellipse at center, #fff 15%, rgba(255,255,255,0) 80% );
}

.c4:before {
  left: -2rem;
}

.c4:after {
  right: -2rem;
}

.c5 {
  overflow-x: auto;
}

.c6 {
  text-align: left;
  empty-cells: show;
  background-color: #fff;
  border: 1px solid #bbcadf;
  border-collapse: collapse;
  border-spacing: 0;
}

.c6 caption {
  padding: 1rem 0;
  font-style: italic;
  text-align: center;
}

.c6 td,
.c6 th {
  padding: 1rem 1.6rem;
  border: 1px solid #bbcadf;
}

.c6 th {
  color: #2f3b6c;
  font-weight: 600;
  background: #e4e8ef;
}

.c6 thead,
.c6 tfoot {
  padding: 1rem 1.6rem;
  vertical-align: bottom;
  background: #f2f5fa;
}

.c6 tfoot {
  vertical-align: top;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 2em;
  padding: 0;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 2rem;
}

.c0 {
  display: block;
  margin-top: 2rem;
  margin-bottom: 1rem;
  font-size: 1.8rem;
  cursor: default;
}

.c1 {
  display: inline-block;
  margin-left: 1rem;
  color: #eb5757;
  font-weight: 700;
}

.c7 {
  width: 70%;
}

.c7 tr > td:nth-child(2) {
  width: 70%;
  text-align: left;
}

.c9 {
  text-align: right;
  border-color: #bbcadf;
  padding-right: 1.6rem;
  text-align: right;
}

.c9::-webkit-outer-spin-button,
.c9::-webkit-inner-spin-button {
  margin: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c8 {
  position: relative;
  display: inline-block;
  margin-right: 2rem;
}

.c10 {
  position: absolute;
  top: 50%;
  right: 0.25rem;
  color: #4d73b8;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

<div>
  <p
    class="c0"
  >
    Y a-t-il eu des périodes d'alternance à temps plein et à temps partiel durant le contrat de travail ?
    <span
      aria-label="champs obligatoire"
      class="c1"
    >
      *
    </span>
  </p>
  <div
    class="c2"
  >
    <label
      class="c3"
    >
      <input
        name="hasTempsPartiel"
        type="radio"
        value="true"
      />
      <span>
        Oui
      </span>
    </label>
    <label
      class="c3"
    >
      <input
        checked=""
        name="hasTempsPartiel"
        type="radio"
        value="false"
      />
      <span>
        Non
      </span>
    </label>
  </div>
  <p
    class="c0"
  >
    Le salaire mensuel a-t-il été le même durant les 12 derniers mois ?
    <span
      aria-label="champs obligatoire"
      class="c1"
    >
      *
    </span>
  </p>
  <div
    class="c2"
  >
    <label
      class="c3"
    >
      <input
        name="hasSameSalaire"
        type="radio"
        value="true"
      />
      <span>
        Oui
      </span>
    </label>
    <label
      class="c3"
    >
      <input
        checked=""
        name="hasSameSalaire"
        type="radio"
        value="false"
      />
      <span>
        Non
      </span>
    </label>
  </div>
  <div
    class="c4"
  >
    <div
      class="c5"
    >
      <table
        class="c6 c7"
      >
        <caption>
          Salaire mensuel brut (prendre en compte les primes et avantages en nature)
        </caption>
        <thead>
          <tr>
            <th>
              Mois
            </th>
            <th>
              Salaire mensuel brut
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              <label
                for="salary0"
              >
                juillet 2019
              </label>
            </td>
            <td>
              <div
                class="c8"
              >
                <input
                  class="c9"
                  id="salary0"
                  name="salaires[0].salary"
                  type="number"
                  value=""
                />
                <span
                  aria-hidden="true"
                  class="c10"
                >
                  €
                </span>
              </div>
            </td>
          </tr>
          <tr>
            <td>
              <label
                for="salary1"
              >
                juin 2019
              </label>
            </td>
            <td>
              <div
                class="c8"
              >
                <input
                  class="c9"
                  id="salary1"
                  name="salaires[1].salary"
                  type="number"
                  value=""
                />
                <span
                  aria-hidden="true"
                  class="c10"
                >
                  €
                </span>
              </div>
            </td>
          </tr>
          <tr>
            <td>
              <label
                for="salary2"
              >
                mai 2019
              </label>
            </td>
            <td>
              <div
                class="c8"
              >
                <input
                  class="c9"
                  id="salary2"
                  name="salaires[2].salary"
                  type="number"
                  value=""
                />
                <span
                  aria-hidden="true"
                  class="c10"
                >
                  €
                </span>
              </div>
            </td>
          </tr>
          <tr>
            <td>
              <label
                for="salary3"
              >
                avril 2019
              </label>
            </td>
            <td>
              <div
                class="c8"
              >
                <input
                  class="c9"
                  id="salary3"
                  name="salaires[3].salary"
                  type="number"
                  value=""
                />
                <span
                  aria-hidden="true"
                  class="c10"
                >
                  €
                </span>
              </div>
            </td>
          </tr>
          <tr>
            <td>
              <label
                for="salary4"
              >
                mars 2019
              </label>
            </td>
            <td>
              <div
                class="c8"
              >
                <input
                  class="c9"
                  id="salary4"
                  name="salaires[4].salary"
                  type="number"
                  value=""
                />
                <span
                  aria-hidden="true"
                  class="c10"
                >
                  €
                </span>
              </div>
            </td>
          </tr>
          <tr>
            <td>
              <label
                for="salary5"
              >
                février 2019
              </label>
            </td>
            <td>
              <div
                class="c8"
              >
                <input
                  class="c9"
                  id="salary5"
                  name="salaires[5].salary"
                  type="number"
                  value=""
                />
                <span
                  aria-hidden="true"
                  class="c10"
                >
                  €
                </span>
              </div>
            </td>
          </tr>
          <tr>
            <td>
              <label
                for="salary6"
              >
                janvier 2019
              </label>
            </td>
            <td>
              <div
                class="c8"
              >
                <input
                  class="c9"
                  id="salary6"
                  name="salaires[6].salary"
                  type="number"
                  value=""
                />
                <span
                  aria-hidden="true"
                  class="c10"
                >
                  €
                </span>
              </div>
            </td>
          </tr>
          <tr>
            <td>
              <label
                for="salary7"
              >
                décembre 2018
              </label>
            </td>
            <td>
              <div
                class="c8"
              >
                <input
                  class="c9"
                  id="salary7"
                  name="salaires[7].salary"
                  type="number"
                  value=""
                />
                <span
                  aria-hidden="true"
                  class="c10"
                >
                  €
                </span>
              </div>
            </td>
          </tr>
          <tr>
            <td>
              <label
                for="salary8"
              >
                novembre 2018
              </label>
            </td>
            <td>
              <div
                class="c8"
              >
                <input
                  class="c9"
                  id="salary8"
                  name="salaires[8].salary"
                  type="number"
                  value=""
                />
                <span
                  aria-hidden="true"
                  class="c10"
                >
                  €
                </span>
              </div>
            </td>
          </tr>
          <tr>
            <td>
              <label
                for="salary9"
              >
                octobre 2018
              </label>
            </td>
            <td>
              <div
                class="c8"
              >
                <input
                  class="c9"
                  id="salary9"
                  name="salaires[9].salary"
                  type="number"
                  value=""
                />
                <span
                  aria-hidden="true"
                  class="c10"
                >
                  €
                </span>
              </div>
            </td>
          </tr>
          <tr>
            <td>
              <label
                for="salary10"
              >
                septembre 2018
              </label>
            </td>
            <td>
              <div
                class="c8"
              >
                <input
                  class="c9"
                  id="salary10"
                  name="salaires[10].salary"
                  type="number"
                  value=""
                />
                <span
                  aria-hidden="true"
                  class="c10"
                >
                  €
                </span>
              </div>
            </td>
          </tr>
          <tr>
            <td>
              <label
                for="salary11"
              >
                août 2018
              </label>
            </td>
            <td>
              <div
                class="c8"
              >
                <input
                  class="c9"
                  id="salary11"
                  name="salaires[11].salary"
                  type="number"
                  value=""
                />
                <span
                  aria-hidden="true"
                  class="c10"
                >
                  €
                </span>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`<StepSalaires /> should render same salaire 1`] = `
.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 2em;
  padding: 0;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 2rem;
}

.c0 {
  display: block;
  margin-top: 2rem;
  margin-bottom: 1rem;
  font-size: 1.8rem;
  cursor: default;
}

.c4 {
  display: block;
  margin-top: 2rem;
  margin-bottom: 1rem;
  font-size: 1.8rem;
  cursor: pointer;
}

.c1 {
  display: inline-block;
  margin-left: 1rem;
  color: #eb5757;
  font-weight: 700;
}

.c6 {
  text-align: right;
  border-color: #bbcadf;
  padding-right: 1.6rem;
  text-align: right;
}

.c6::-webkit-outer-spin-button,
.c6::-webkit-inner-spin-button {
  margin: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c5 {
  position: relative;
  display: inline-block;
  margin-right: 2rem;
}

.c7 {
  position: absolute;
  top: 50%;
  right: 0.25rem;
  color: #4d73b8;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

<div>
  <p
    class="c0"
  >
    Y a-t-il eu des périodes d'alternance à temps plein et à temps partiel durant le contrat de travail ?
    <span
      aria-label="champs obligatoire"
      class="c1"
    >
      *
    </span>
  </p>
  <div
    class="c2"
  >
    <label
      class="c3"
    >
      <input
        name="hasTempsPartiel"
        type="radio"
        value="true"
      />
      <span>
        Oui
      </span>
    </label>
    <label
      class="c3"
    >
      <input
        checked=""
        name="hasTempsPartiel"
        type="radio"
        value="false"
      />
      <span>
        Non
      </span>
    </label>
  </div>
  <p
    class="c0"
  >
    Le salaire mensuel a-t-il été le même durant les 12 derniers mois ?
    <span
      aria-label="champs obligatoire"
      class="c1"
    >
      *
    </span>
  </p>
  <div
    class="c2"
  >
    <label
      class="c3"
    >
      <input
        checked=""
        name="hasSameSalaire"
        type="radio"
        value="true"
      />
      <span>
        Oui
      </span>
    </label>
    <label
      class="c3"
    >
      <input
        name="hasSameSalaire"
        type="radio"
        value="false"
      />
      <span>
        Non
      </span>
    </label>
  </div>
  <label
    class="c4"
  >
    Quel a été le montant du salaire mensuel brut ?
    <span
      aria-label="champs obligatoire"
      class="c1"
    >
      *
    </span>
  </label>
  <div
    class="c5"
  >
    <input
      class="c6"
      name="salaire"
      type="number"
      value="3000"
    />
    <span
      aria-hidden="true"
      class="c7"
    >
      €
    </span>
  </div>
  <span>
    Prendre en compte les primes et avantages en nature.
  </span>
</div>
`;

exports[`<StepSalaires /> should render tempsPartiel 1`] = `
.c14 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding: 0;
  color: #ff7067;
  font-weight: 400;
  font-size: 1.6rem;
  line-height: 1.625;
  text-align: left;
  background: none;
  border: none;
  border-radius: 0;
}

.c14:focus,
.c14:hover,
.c14:active {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c16 {
  height: 1.4rem;
  margin-left: 0.4rem;
  -webkit-transition: -webkit-transform 250ms linear;
  -webkit-transition: transform 250ms linear;
  transition: transform 250ms linear;
}

.c13:hover .c16 {
  -webkit-transform: translateX(5px);
  -ms-transform: translateX(5px);
  transform: translateX(5px);
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 2em;
  padding: 0;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 2rem;
}

.c0 {
  display: block;
  margin-top: 2rem;
  margin-bottom: 1rem;
  font-size: 1.8rem;
  cursor: default;
}

.c4 {
  display: block;
  margin-top: 2rem;
  margin-bottom: 1rem;
  font-size: 1.8rem;
  cursor: pointer;
}

.c1 {
  display: inline-block;
  margin-left: 1rem;
  color: #eb5757;
  font-weight: 700;
}

.c17 {
  margin: 2rem 0;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 0.4rem;
}

.c6 {
  -webkit-flex-basis: 15rem;
  -ms-flex-preferred-size: 15rem;
  flex-basis: 15rem;
  margin-right: 2rem;
}

.c8 {
  -webkit-flex-basis: 8rem;
  -ms-flex-preferred-size: 8rem;
  flex-basis: 8rem;
  margin-right: 2rem;
}

.c7 {
  font-weight: 700;
}

.c9 {
  width: 100%;
}

.c10 {
  text-align: right;
  border-color: #bbcadf;
  padding-right: 1.6rem;
  text-align: right;
}

.c10::-webkit-outer-spin-button,
.c10::-webkit-inner-spin-button {
  margin: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c11 {
  position: relative;
  display: inline-block;
}

.c12 {
  position: absolute;
  top: 50%;
  right: 0.25rem;
  color: #4d73b8;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c15 {
  margin-left: 2rem;
  font-size: 1.4rem;
}

<div>
  <p
    class="c0"
  >
    Y a-t-il eu des périodes d'alternance à temps plein et à temps partiel durant le contrat de travail ?
    <span
      aria-label="champs obligatoire"
      class="c1"
    >
      *
    </span>
  </p>
  <div
    class="c2"
  >
    <label
      class="c3"
    >
      <input
        checked=""
        name="hasTempsPartiel"
        type="radio"
        value="true"
      />
      <span>
        Oui
      </span>
    </label>
    <label
      class="c3"
    >
      <input
        name="hasTempsPartiel"
        type="radio"
        value="false"
      />
      <span>
        Non
      </span>
    </label>
  </div>
  <label
    class="c4"
  >
    Quels ont été les durées et les salaires des périodes à temps plein et à temps partiel ?
  </label>
  <div
    class="c5"
  >
    <div
      class="c6 c7"
    >
      Type de contrat
    </div>
    <div
      class="c8 c7"
    >
      Durée en mois
    </div>
    <div
      class="c7"
    >
      Rémunération
    </div>
  </div>
  <div
    class="c5"
  >
    <div
      class="c6"
    >
      <select
        class="c9"
        name="salairePeriods[0].type"
      >
        <option>
          Temps partiel
        </option>
        <option>
          Temps plein
        </option>
      </select>
    </div>
    <div
      class="c8"
    >
      <input
        class="c10"
        name="salairePeriods[0].duration"
        type="number"
        value="24"
      />
    </div>
    <div>
      <div
        class="c11"
      >
        <input
          class="c10"
          name="salairePeriods[0].salary"
          type="number"
          value="2000"
        />
        <span
          aria-hidden="true"
          class="c12"
        >
          €
        </span>
      </div>
      <button
        class="c13 c14 c15"
        type="button"
      >
        Supprimer
        <svg
          class="c16"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <line
            x1="5"
            x2="19"
            y1="12"
            y2="12"
          />
          <polyline
            points="12 5 19 12 12 19"
          />
        </svg>
      </button>
    </div>
  </div>
  <div
    class="c5"
  >
    <div
      class="c6"
    >
      <select
        class="c9"
        name="salairePeriods[1].type"
      >
        <option>
          Temps partiel
        </option>
        <option>
          Temps plein
        </option>
      </select>
    </div>
    <div
      class="c8"
    >
      <input
        class="c10"
        name="salairePeriods[1].duration"
        type="number"
        value="12"
      />
    </div>
    <div>
      <div
        class="c11"
      >
        <input
          class="c10"
          name="salairePeriods[1].salary"
          type="number"
          value="1000"
        />
        <span
          aria-hidden="true"
          class="c12"
        >
          €
        </span>
      </div>
      <button
        class="c13 c14 c15"
        type="button"
      >
        Supprimer
        <svg
          class="c16"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <line
            x1="5"
            x2="19"
            y1="12"
            y2="12"
          />
          <polyline
            points="12 5 19 12 12 19"
          />
        </svg>
      </button>
    </div>
  </div>
  <button
    class="c13 c14 c17"
    type="button"
  >
    Ajouter une période
    <svg
      class="c16"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <line
        x1="5"
        x2="19"
        y1="12"
        y2="12"
      />
      <polyline
        points="12 5 19 12 12 19"
      />
    </svg>
  </button>
</div>
`;
